Code modified on natural wonders  and small guided tours

--- a/public/guided-small-tours.html
+++ b/public/guided-small-tours.html
@@ -550,7 +550,8 @@
         <p style="font-size: 18px; color: #666; margin-bottom: 40px;">Embark on an unforgettable adventure exploring the Serengeti and Mount Kilimanjaro</p>
         
         <div style="display: flex; gap: 20px; justify-content: space-between; flex-wrap: wrap;">
-            <div style="width: 100%; max-width: 30%; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+            <!-- Tour Packages -->
+            <div style="width: 30%; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
                 <h2 style="font-size: 20px; margin-bottom: 10px;">WHY GO ON A TANZANIAN SAFARI ADVENTURE</h2>
                 <ul style="padding-left: 20px;">
                     <li style="margin-bottom: 8px;">Discover the Serengeti, home to the Great Migration</li>
@@ -559,8 +560,9 @@
                     <li style="margin-bottom: 8px;">Choose from customizable tour packages</li>
                 </ul>
             </div>
-            <div style="width: 100%; max-width: 70%; display: flex; gap: 20px; flex-wrap: wrap; justify-content: space-between;">
-                <div style="background: white; border-radius: 8px; overflow: hidden; width: 100%; max-width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+            <div style="width: 65%; display: flex; gap: 20px; flex-wrap: wrap; justify-content: space-between;">
+                <!-- Tour Cards -->
+                <div style="background: white; border-radius: 8px; overflow: hidden; width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
                     <img src="images/add1.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
                     <div style="padding: 15px;">
                         <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
@@ -570,9 +572,10 @@
                         <h3 style="margin: 10px 0;">SERENGETI & NGORONGORO CRATER TOUR</h3>
                         <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">220,000 KES</p>
                         <a href="#" style="display: block; color: red; text-decoration: none; font-weight: bold;">VIEW MAP <i class="fas fa-map-marker-alt"></i></a>
+                        <a href="#" style="display: block; color: green; text-decoration: none; font-weight: bold; margin-top: 10px;">BOOK NOW</a>
                     </div>
                 </div>
-                <div style="background: white; border-radius: 8px; overflow: hidden; width: 100%; max-width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                <div style="background: white; border-radius: 8px; overflow: hidden; width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
                     <img src="images/add2.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
                     <div style="padding: 15px;">
                         <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
@@ -582,9 +585,10 @@
                         <h3 style="margin: 10px 0;">KILIMANJARO & TARANGIRE ESCAPADE</h3>
                         <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">200,000 KES</p>
                         <a href="#" style="display: block; color: red; text-decoration: none; font-weight: bold;">VIEW MAP <i class="fas fa-map-marker-alt"></i></a>
+                        <a href="#" style="display: block; color: green; text-decoration: none; font-weight: bold; margin-top: 10px;">BOOK NOW</a>
                     </div>
                 </div>
-                <div style="background: white; border-radius: 8px; overflow: hidden; width: 100%; max-width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                <div style="background: white; border-radius: 8px; overflow: hidden; width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
                     <img src="images/add3.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
                     <div style="padding: 15px;">
                         <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
@@ -594,6 +598,7 @@
                         <h3 style="margin: 10px 0;">SERENGETI & NGORONGORO EXPLORE</h3>
                         <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">180,000 KES</p>
                         <a href="#" style="display: block; color: red; text-decoration: none; font-weight: bold;">VIEW MAP <i class="fas fa-map-marker-alt"></i></a>
+                        <a href="#" style="display: block; color: green; text-decoration: none; font-weight: bold; margin-top: 10px;">BOOK NOW</a>
                     </div>
                 </div>
             </div>
@@ -601,20 +606,38 @@
     </div>
 </section>
 
-<script>
-    window.addEventListener("resize", function() {
-        let items = document.querySelectorAll('div[style="width: 100%; max-width: 30%;"]');
-        if (window.innerWidth < 768) {
-            items.forEach(function(item) {
-                item.style.width = "100%";
-            });
-        } else {
-            items.forEach(function(item) {
-                item.style.width = "30%";
-            });
+<!-- Responsive CSS -->
+<style>
+    /* Mobile Styles */
+    @media (max-width: 768px) {
+        .tour-card {
+            width: 100% !important;
         }
-    });
-</script>
+        .tour-description {
+            font-size: 14px !important;
+        }
+        .tour-title {
+            font-size: 16px !important;
+        }
+        .tour-price {
+            font-size: 18px !important;
+        }
+    }
+
+    /* Tablet Styles */
+    @media (max-width: 1024px) {
+        .tour-card {
+            width: 45% !important;
+        }
+    }
+
+    /* Larger Devices */
+    @media (min-width: 1025px) {
+        .tour-card {
+            width: 30% !important;
+        }
+    }
+</style>
 
     
 
