Code modified on natural wonders  and small guided tours

--- a/public/winter.html
+++ b/public/winter.html
@@ -53,65 +53,103 @@
         <a href="#qatar" style="margin: 0 15px; text-decoration: none; color: black; font-weight: 600;">QATAR</a>
     </nav>
 
-    <!-- Kenya Section -->
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kenya Safari Tours</title>
+    <script defer src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- FontAwesome for icons -->
+</head>
+<body>
+
     <section style="font-family: 'Jost', sans-serif; background-color: #f4f4f4; padding: 20px 0;">
         <div style="width: 90%; max-width: 1200px; margin: auto; text-align: center;">
-            <!-- Country Name and Tagline for Kenya -->
-            <h1 style="font-size: 36px; color: #333; margin-bottom: 10px;">KENYA</h1>
-            <p style="font-size: 18px; color: #666; margin-bottom: 40px;">Explore the heart of East Africa with stunning safaris and breathtaking landscapes</p>
-            
+            <!-- Country Name and Tagline -->
+            <h1 id="country-name" style="font-size: 36px; color: #333; margin-bottom: 10px;">Loading...</h1>
+            <p id="country-tagline" style="font-size: 18px; color: #666; margin-bottom: 40px;">Loading...</p>
+
             <div style="display: flex; gap: 20px; justify-content: space-between;">
+                <!-- Why Go Section -->
                 <div style="width: 30%; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
                     <h2 style="font-size: 20px; margin-bottom: 10px;">WHY GO ON A KENYAN SAFARI ADVENTURE</h2>
-                    <ul style="padding-left: 20px;">
-                        <li style="margin-bottom: 8px;">Experience the famous Maasai Mara National Reserve</li>
-                        <li style="margin-bottom: 8px;">Explore Amboseli National Park with stunning views of Mount Kilimanjaro</li>
-                        <li style="margin-bottom: 8px;">Visit the stunning Lake Nakuru for a glimpse of flamingos</li>
-                        <li style="margin-bottom: 8px;">Choose from flexible dates and customizable packages</li>
+                    <ul id="why-go-list" style="padding-left: 20px;">
+                        <li>Loading...</li>
                     </ul>
                 </div>
-                <div style="width: 70%; display: flex; gap: 20px;">
-                    <div style="background: white; border-radius: 8px; overflow: hidden; width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                        <img src="images/add6.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
-                        <div style="padding: 15px;">
-                            <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
-                            <p style="font-size: 14px; color: #666; margin: 10px 0;">7 days / 6 nights</p>
-                            <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ 4.9</p>
-                            <p style="font-size: 12px; color: #888;">May - Dec</p>
-                            <h3 style="margin: 10px 0;">MAASAI MARA & AMBOSELI EXPLORER</h3>
-                            <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">150,000 KES</p>
-                            <a href="#" style="display: block; color: red; text-decoration: none; font-weight: bold;">VIEW MAP <i class="fas fa-map-marker-alt"></i></a>
-                        </div>
-                    </div>
-                    <div style="background: white; border-radius: 8px; overflow: hidden; width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                        <img src="images/add4.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
-                        <div style="padding: 15px;">
-                            <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
-                            <p style="font-size: 14px; color: #666; margin: 10px 0;">6 days / 5 nights</p>
-                            <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ 4.8</p>
-                            <p style="font-size: 12px; color: #888;">May - Dec</p>
-                            <h3 style="margin: 10px 0;">AMBOSELI & LAKE NAKURU ESCAPADE</h3>
-                            <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">120,000 KES</p>
-                            <a href="#" style="display: block; color: red; text-decoration: none; font-weight: bold;">VIEW MAP <i class="fas fa-map-marker-alt"></i></a>
-                        </div>
-                    </div>
-                    <div style="background: white; border-radius: 8px; overflow: hidden; width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                        <img src="images/add2.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
-                        <div style="padding: 15px;">
-                            <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
-                            <p style="font-size: 14px; color: #666; margin: 10px 0;">5 days / 4 nights</p>
-                            <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ 4.7</p>
-                            <p style="font-size: 12px; color: #888;">May - Dec</p>
-                            <h3 style="margin: 10px 0;">SAMBURU & NAKURU HIGHLIGHTS</h3>
-                            <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">110,000 KES</p>
-                            <a href="#" style="display: block; color: red; text-decoration: none; font-weight: bold;">VIEW MAP <i class="fas fa-map-marker-alt"></i></a>
-                        </div>
-                    </div>
+
+                <!-- Tour Cards Section -->
+                <div id="tours-container" style="width: 70%; display: flex; gap: 20px; flex-wrap: wrap; justify-content: center;">
+                    <!-- Tour cards will be inserted here dynamically -->
                 </div>
             </div>
         </div>
     </section>
-    
+
+    <script>
+    document.addEventListener("DOMContentLoaded", function () {
+    fetch("data/winter-tours.json") // Ensure the JSON path is correct
+        .then(response => {
+            if (!response.ok) {
+                throw new Error("Network response was not ok");
+            }
+            return response.json();
+        })
+        .then(data => {
+            // Update country name and tagline
+            document.getElementById("country-name").textContent = data.country;
+            document.getElementById("country-tagline").textContent = data.tagline;
+
+            // Populate 'Why Go' section
+            const whyGoList = document.getElementById("why-go-list");
+            whyGoList.innerHTML = "";
+            data.why_go.forEach(item => {
+                const li = document.createElement("li");
+                li.style.marginBottom = "8px";
+                li.textContent = item;
+                whyGoList.appendChild(li);
+            });
+
+            // Populate tour cards
+            const toursContainer = document.getElementById("tours-container");
+            toursContainer.innerHTML = "";
+            data.tours.forEach((tour, index) => {
+                const tourCard = document.createElement("div");
+                tourCard.style.background = "white";
+                tourCard.style.borderRadius = "8px";
+                tourCard.style.overflow = "hidden";
+                tourCard.style.width = "30%";
+                tourCard.style.boxShadow = "0 4px 6px rgba(0, 0, 0, 0.1)";
+                tourCard.style.textAlign = "left";
+                tourCard.style.cursor = "pointer"; // Make it look clickable
+                tourCard.onclick = function () {
+                    window.location.href = `winter-tours-details.html?id=${index}`;
+                };
+
+                tourCard.innerHTML = `
+                    <img src="${tour.image}" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
+                    <div style="padding: 15px;">
+                        <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">
+                            ${tour.category}
+                        </span>
+                        <p style="font-size: 14px; color: #666; margin: 10px 0;">${tour.duration}</p>
+                        <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ ${tour.rating}</p>
+                        <p style="font-size: 12px; color: #888;">${tour.season}</p>
+                        <h3 style="margin: 10px 0;">${tour.name}</h3>
+                        <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">${tour.price}</p>
+                    </div>
+                `;
+
+                toursContainer.appendChild(tourCard);
+            });
+        })
+        .catch(error => console.error("Error loading JSON data:", error));
+});
+</script>
+
+</body>
+</html>
+
 
     <!-- Tanzania Section -->
     <section style="font-family: 'Jost', sans-serif; background-color: #f4f4f4; padding: 20px 0;">
