--- a/public/summer.html
+++ b/public/summer.html
@@ -71,46 +71,50 @@
                     </ul>
                 </div>
                 <div style="width: 70%; display: flex; gap: 20px;">
-                    <div style="background: white; border-radius: 8px; overflow: hidden; width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                        <img src="images/add6.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
-                        <div style="padding: 15px;">
-                            <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
-                            <p style="font-size: 14px; color: #666; margin: 10px 0;">7 days / 6 nights</p>
-                            <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ 4.9</p>
-                            <p style="font-size: 12px; color: #888;">May - Dec</p>
-                            <h3 style="margin: 10px 0;">MAASAI MARA & AMBOSELI EXPLORER</h3>
-                            <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">150,000 KES</p>
-                            <a href="#" style="display: block; color: red; text-decoration: none; font-weight: bold;">VIEW MAP <i class="fas fa-map-marker-alt"></i></a>
+                    <a href="/Natural-Wonders-of-Iceland" style="text-decoration: none; color: inherit; width: 30%;">
+                        <div style="background: white; border-radius: 8px; overflow: hidden; width: 100%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+                            <img src="images/add6.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
+                            <div style="padding: 15px;">
+                                <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
+                                <p style="font-size: 14px; color: #666; margin: 10px 0;">7 days / 6 nights</p>
+                                <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ 4.9</p>
+                                <p style="font-size: 12px; color: #888;">May - Dec</p>
+                                <h3 style="margin: 10px 0;">MAASAI MARA & AMBOSELI EXPLORER</h3>
+                                <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">150,000 KES</p>
+                            </div>
                         </div>
-                    </div>
-                    <div style="background: white; border-radius: 8px; overflow: hidden; width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                        <img src="images/add4.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
-                        <div style="padding: 15px;">
-                            <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
-                            <p style="font-size: 14px; color: #666; margin: 10px 0;">6 days / 5 nights</p>
-                            <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ 4.8</p>
-                            <p style="font-size: 12px; color: #888;">May - Dec</p>
-                            <h3 style="margin: 10px 0;">AMBOSELI & LAKE NAKURU ESCAPADE</h3>
-                            <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">120,000 KES</p>
-                            <a href="#" style="display: block; color: red; text-decoration: none; font-weight: bold;">VIEW MAP <i class="fas fa-map-marker-alt"></i></a>
+                    </a>
+                    <a href="your-link-2.html" style="text-decoration: none; color: inherit; width: 30%;">
+                        <div style="background: white; border-radius: 8px; overflow: hidden; width: 100%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+                            <img src="images/add4.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
+                            <div style="padding: 15px;">
+                                <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
+                                <p style="font-size: 14px; color: #666; margin: 10px 0;">6 days / 5 nights</p>
+                                <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ 4.8</p>
+                                <p style="font-size: 12px; color: #888;">May - Dec</p>
+                                <h3 style="margin: 10px 0;">AMBOSELI & LAKE NAKURU ESCAPADE</h3>
+                                <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">120,000 KES</p>
+                            </div>
                         </div>
-                    </div>
-                    <div style="background: white; border-radius: 8px; overflow: hidden; width: 30%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                        <img src="images/add2.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
-                        <div style="padding: 15px;">
-                            <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
-                            <p style="font-size: 14px; color: #666; margin: 10px 0;">5 days / 4 nights</p>
-                            <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ 4.7</p>
-                            <p style="font-size: 12px; color: #888;">May - Dec</p>
-                            <h3 style="margin: 10px 0;">SAMBURU & NAKURU HIGHLIGHTS</h3>
-                            <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">110,000 KES</p>
-                            <a href="#" style="display: block; color: red; text-decoration: none; font-weight: bold;">VIEW MAP <i class="fas fa-map-marker-alt"></i></a>
+                    </a>
+                    <a href="your-link-3.html" style="text-decoration: none; color: inherit; width: 30%;">
+                        <div style="background: white; border-radius: 8px; overflow: hidden; width: 100%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+                            <img src="images/add2.jpg" alt="Tour Image" style="width: 100%; height: 180px; object-fit: cover;">
+                            <div style="padding: 15px;">
+                                <span style="background: #ff6347; color: white; display: inline-block; padding: 5px 10px; border-radius: 20px; font-size: 12px; font-weight: bold;">SAFARI TOUR</span>
+                                <p style="font-size: 14px; color: #666; margin: 10px 0;">5 days / 4 nights</p>
+                                <p style="color: #ffa500; font-size: 14px;">⭐⭐⭐⭐⭐ 4.7</p>
+                                <p style="font-size: 12px; color: #888;">May - Dec</p>
+                                <h3 style="margin: 10px 0;">SAMBURU & NAKURU HIGHLIGHTS</h3>
+                                <p style="font-size: 20px; font-weight: bold; color: #333; margin: 10px 0;">110,000 KES</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
+    
     
 
     <!-- Tanzania Section -->
